docs: example.nomad.hcl

--- a/website/content/api-docs/json-jobs.mdx
+++ b/website/content/api-docs/json-jobs.mdx
@@ -45,8 +45,8 @@ reproduce it:
 
 ```shell-session
 $ nomad init
-Example job file written to example.nomad
-$ nomad job run -output example.nomad
+Example job file written to example.nomad.hcl
+$ nomad job run -output example.nomad.hcl
 ```
 
 ```json
