docs: bit more .nomad.hcl suffix

--- a/website/content/docs/commands/job/run.mdx
+++ b/website/content/docs/commands/job/run.mdx
@@ -198,7 +198,7 @@ Schedule a job which cannot be successfully placed. This results in a scheduling
 failure and the specifics of the placement are printed:
 
 ```shell-session
-$ nomad job run failing.nomad
+$ nomad job run failing.nomad.hcl
 ==> 2021-06-09T16:49:00-07:00: Monitoring evaluation "2ae0e6a5"
     2021-06-09T16:49:00-07:00: Evaluation triggered by job "example"
 ==> 2021-06-09T16:49:01-07:00: Monitoring evaluation "2ae0e6a5"
